# RAG-components

./: LICENSE  README.md  pyproject.toml
components/chat_interface/: chat_interface.py  config.py
components/database/postgres/: config.py  db_pg_vector.py  setup.sh
data/embeddings/: embedding_generator.py
database/postgres/: db_pg_vector.py
interfaces-examples/: db__pg_client_pg.py  embeddings_gen_client.py
langchain-snips/agents/: 1_agent_single_action.py  2_agent_multi_action.py  readme.md
langchain-snips/callbacks/: 1_async_iterator_callback.py  2_async_final_iterator_callback.py  3_final_streaming_stdout_callback.py  4_logging_callback.py  readme.md
langchain-snips/chains/: 1_chain.py
langchain-snips/chatModels/: 1_chat_openai.py  2_chat_claude.py  3_chat_gemini.py  5_chat_cohere.py  readme.md
langchain-snips/embeddings/: 1_embeddings_hugging_face.py
langchain-snips/memory/: 1_buffer_memory.py  2_buffer_window_memory.py  3_summary_memory.py
langchain-snips/prompt/: 1_prompt_template.py  2_few_shot_prompt.py  3_chat_prompt.py  4_system_prompt.py  5_ai_prompt.py  6_message_placeholder.py  readme.md
langchain-snips/tools/: 1_tool_string_reversal.py  2_tool_weather_api.py  3_tool_file_search.py
