[project]
name = "rag-components"
version = "0.1.0"
description = ""
authors = [
    {name = "bytewhisperer11"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
