[project]
name = "rag-components"
version = "0.1.0"
description = ""
authors = [
    { name = "bytewhisperer11" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psycopg2>=2.9.10,<3.0.0",
    "sentence-transformers>=4.1.0,<5.0.0",
    "transformers>=4.51.3,<5.0.0",
    "torch>=2.7.0,<3.0.0",
    "langchain>=0.3.25,<0.4.0",
    "langchain-core (>=0.3.58,<0.4.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "langchain-google-genai (==2.1.4)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "duckduckgo-search (>=8.0.1,<9.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
